force-app/main/default/objects/loan__Multi_Step_Loan_Setup__c/loan__Multi_Step_Loan_Setup__c.object-meta.xml
<CustomObject>
    <description>This contains the date when the interest rate will change for the loan account</description>
    <label>Rate Schedule Setup</label>
    <nameField>
        <displayFormat>MSLSID-{0000000000}</displayFormat>
        <label>Rate Schedule Setup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Schedule Setup</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>