force-app/main/default/objects/loan__Multi_Step_Loan_Setup__c/fields/loan__Floating_Rate_Index__c.field-meta.xml
<CustomField>
    <fullName>loan__Floating_Rate_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This defines the base rate for loan.</inlineHelpText>
    <label>Floating Rate Index</label>
    <referenceTo>loan__Floating_Rate_Index__c</referenceTo>
    <relationshipLabel>Rate Schedule Setup</relationshipLabel>
    <relationshipName>Rate_Schedule_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>