force-app/main/default/objects/loan__Multi_Step_Loan_Setup__c/fields/loan__Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>loan__Interest_Rate__c</fullName>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>