force-app/main/default/objects/loan__Multi_Step_Loan_Setup__c/fields/loan__Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Account__c</fullName>
    <label>Loan Account</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipName>Multi_Step_Loan_Setup</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>