force-app/main/default/objects/loan__Multi_Step_Loan_Setup__c/fields/loan__Parent_Multi_Step_Loan_Setup__c.field-meta.xml
<CustomField>
    <fullName>loan__Parent_Multi_Step_Loan_Setup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to capture the parent rate schedule record whenever any auto rate change happens by system like floating rate revision on revision frequency.</description>
    <label>Parent Rate Schedule Setup</label>
    <referenceTo>loan__Multi_Step_Loan_Setup__c</referenceTo>
    <relationshipLabel>Child Rate Schedule Setup</relationshipLabel>
    <relationshipName>Multi_Step_Loan_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>