force-app/main/default/objects/loan__Multi_Step_Loan_Setup__c/fields/loan__Rate_Change_Date_Next__c.field-meta.xml
<CustomField>
    <fullName>loan__Rate_Change_Date_Next__c</fullName>
    <defaultValue>DATE(3100, 12, 31)</defaultValue>
    <description>Next Rate change date, used for processing only, please do not display it on UI</description>
    <label>Next Rate Change Date</label>
    <type>Date</type>
</CustomField>