force-app/main/default/objects/loan__Multi_Step_Loan_Setup__c/fields/loan__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>