force-app/main/default/objects/loan__Multi_Step_Loan_Setup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>loan__Loan_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>loan__Loan_Account__c</field>
        <operation>equals</operation>
        <value>LAI-00001631</value>
    </filters>
    <label>All</label>
</ListView>